<resources>
    <string name="app_name">GraduationPlanner</string>
    <string name="course_name_string">Course:</string>
    <string name="course_credits">Course Credits:</string>
    <string name="course_description">Description:</string>
    <string name="course_prerequisites">Course Prerequisites:</string>
    <string name="select_courses">Select courses</string>
    <string name="select_courses_for"><!--Select courses for: \n-->%1$s</string>
    <string name="delete_text">Delete</string>
    <string name="add_text">Add</string>
    <string name="done_text">DONE</string>
    <string name="save_plan">SAVE PLAN</string>
    <string name="plan_name">Plan Name:</string>
    <string name="plan_information">PLAN INFORMATION</string>
    <string name="total_credits">Total Credits:</string>
    <string name="new_plan">New plan</string>
    <string name="selected_total_credits">Credits: %1$d</string>
    <string name="delete_plan_menu">Delete plan</string>
    <string name="logout_menu">Logout</string>
    <string name="length">Length</string>
    <string name="my_plans">MY PLANS</string>
    <string name="search">Search</string>
    <string name="search_courses_hint">Search Courses</string>
    <string name="enter_plan_name_hint">Enter plan name</string>
    <string name="semester_information">SEMESTER INFORMATION</string>
    <string name="no_plan_data">No graduation plan data yet. Click the add button to create a new plan.</string>
</resources>
