<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearContainer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvListCourseNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name_string"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvListCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorGray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/linearContainer1">

        <TextView
            android:id="@+id/tvListCourseCreditsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_credits"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvListCourseCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorGray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearContainer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/linearContainer2">

        <TextView
            android:id="@+id/tvListCourseDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/course_description"/>

        <TextView
            android:id="@+id/tvListCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorGray"
            android:paddingTop="4dp"/>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>